Refactor intersection logic in Cylinder and Tube classes; improve unit tests for edge cases